'SITRANU-FIRST-COMMIT'

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,11 @@
 
 // If you want to add something do it here
 @import "custom";
+
+//Login SCSS File
+
+@import 'login';
+
+//About us scss
+
+@import 'about';
