--- a/src/app/views/about-us/about-us.component.html
+++ b/src/app/views/about-us/about-us.component.html
@@ -1,1 +1,112 @@
-<div class="about">hgjhghg</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link href="../../../scss/_about.scss" rel="stylesheet" type="text/css" />
+    <title>Sitranu Foundation</title>
+  </head>
+  <body>
+    <!-- SHOWCASE AREA STARTS -->
+    <section id="showcase">
+      <div class="primary-overlay text-white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 text-center">
+              <h1 class="display-2 mt-5 pt-5">
+                WHO WE ARE
+              </h1>
+            </div>
+            <div class="col-lg-6"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- SHOWCASE AREA ENDS -->
+
+    <!-- ABOUT SECTION STARTS -->
+    <section id="about" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2 class="heading-main heading-in-padded">
+              Amnesty International is a global movement of more than 7 million
+              people who take injustice personally. We are campaigning for a
+              world where human rights are enjoyed by all.
+            </h2>
+            <p>
+              Sitranu Foundation was founded in January 2017 to support
+              highly-talented students living in abject poverty to pursue
+              quality school education. What started with just four members and
+              Rs. 48,000 (~500 Euros) of initial funding has now grown into
+              around 40 members and Rs. 500,000 (~6000 Euros) of annual
+              donations. Read more about us, our history, our mission, and our
+              processes in this page.
+            </p>
+          </div>
+          <div class="col-md-6">
+            <header class="quote-source-header">Amnesty International</header>
+            <div class="quote-source-text">
+              Better to light a candle than curse the darkness
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ABOUT SECTION ENDS -->
+
+    <!-- POSTER SECTION STARTS -->
+    <section id="poster-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 m-auto text-center">
+            <h1 style="color: white;" class="mt-5 pt-5">
+              WHAT DOES SITRANU DO?
+            </h1>
+            <p style="color: white;">
+              We investigate and expose the facts, whenever and wherever abuses
+              happen.
+            </p>
+            <p style="color: white;">
+              We lobby governments, and other powerful groups such as companies.
+              Making sure they keep their promises and respect international
+              law.
+            </p>
+            <p style="color: white;">
+              By telling the powerful stories of the people we work with, we
+              mobilize millions of supporters around the world to campaign for
+              change and to stand in defence of activists on the frontline.
+            </p>
+            <p style="color: white;">
+              We support people to claim their rights through education and
+              training.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- POSTER SECTION ENDS -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
