--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,36 +1,162 @@
-<div class="page-content-wrap">
-  <!--Header Begins-->
-  <div class="head-content-wrap">
-    <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="#">Hihhhhdden brand</a>
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(currhhhhent)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
+<div class="wrapper">
+  <div class="header-container">
+     <header>
+        <div class="row">
+           <div class="col-md-12">
+              <div class="top-header py-2 px-3">
+                 <h6>Workplace Giving</h6>
+                 <h6>Previous Platform</h6>
+                 <button class="login-btn">Login</button>
+              </div>
+           </div>
+           <div class="col-md-12">
+              <nav class="navbar navbar-expand-lg page-navbar  py-3 px-3">
+                 <img src="assets/img/brand/logo.png" class="logo">
+                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                 <i class="cui-justify-left icons font-2xl d-block mt-4"></i>
+                 </button>
+                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                       <li class="nav-item pr-md-3 active">
+                          <a class="nav-link" href="#">Home</a>
+                       </li>
+                       <li class="nav-item pr-md-3">
+                          <a class="nav-link" href="#">What We Are</a>
+                       </li>
+                       <li class="nav-item pr-md-3">
+                          <a class="nav-link" href="#">What We Do</a>
+                       </li>
+                       <li class="nav-item pr-md-3">
+                          <a class="nav-link" href="#">Contact Us</a>
+                       </li>
+                       <li class="nav-item pr-md-3">
+                          <a class="nav-link" href="#">Events</a>
+                       </li>
+                    </ul>
+                 </div>
+              </nav>
+           </div>
         </div>
-      </nav>
-    </header>
+     </header>
+  </div>
+  <div class="desc-container">
+     <section class="container-content py-3">
+        <div class="row container-border">
+           <div  class="background-1 col-lg-6 col-md-12 p-0"></div>
+           <div class="col-lg-6 col-md-12 p-4">
+              <button class='recommended bg-warning'>Recommended</button>
+              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India. Join the fight against hunger and malnutrition.</h5>
+              <div class="progress-title pt-md-4"><span>1,553 supporters needed</span><span class="fl-r">70%</span></div>
+              <div class="progress">
+                 <div class="progress-bar" style="width:70%"></div>
+              </div>
+              <button class="pay-now">Give Now</button>
+           </div>
+        </div>
+     </section>
+     <section class="container-content py-3">
+        <div class="row">
+           <div class="col-md-12 py-2 px-0">
+              <h3>Sponsor a child's education
+              </h3>
+           </div>
+           <div class="col-lg-4 col-md-6 col-12 mb-3">
+              <div class="product-cont">
+                 <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                 <button class='recommended bg-info align-top'>Recommended</button>
+                 <div class="donate-container">
+                 <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                 <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+                 <button class="donate-btn bg-info">Donate</button>
+                </div>
+              </div>
+           </div>
+           <div class="col-lg-4 col-md-6 col-12 mb-3">
+              <div class="product-cont">
+                <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                <button class='recommended bg-info align-top'>Recommended</button>
+                <div class="donate-container">
+                <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+                <button class="donate-btn bg-info">Donate</button>
+              </div>
+            </div>
+           </div>
+           <div class="col-lg-4 col-md-6 col-12 mb-3">
+              <div class="product-cont">
+                <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                <button class='recommended bg-info align-top'>Recommended</button>
+                <div class="donate-container">
+                <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+                <button class="donate-btn bg-info">Donate</button>
+              </div>
+            </div>
+           </div>
+        </div>
+     </section>
+     <section  class="py-3 desc-divider-content">
+      <div class="row">
+         <div class="col-md-12 py-4">
+            <img src="assets/img/images/img1.jpg" class="desc-divider-content-img">
+            <h4 class="font-strong">Our promise that your giving is doing what it’s supposed to - changing lives.</h4>
+            <h5 class="desc mt-3">We go to the extent of meeting the actual people that the nonprofits serve. Yes, they sometimes live in remote villages</h5>
+            <h5 class="mt-3 text-primary">Read more</h5>
+         </div>     
+      </div>
+     </section>
+     <section class="container-content py-3">
+      <div class="row">
+         <div class="col-md-12 py-2 px-0">
+            <h3>Sponsor a child's education
+            </h3>
+         </div>
+         <div class="col-lg-4 col-md-6 col-12 mb-3">
+            <div class="product-cont">
+               <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+               <button class='recommended bg-info align-top'>Recommended</button>
+               <div class="donate-container">
+               <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+               <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+               <button class="donate-btn bg-info">Donate</button>
+              </div>
+            </div>
+         </div>
+         <div class="col-lg-4 col-md-6 col-12 mb-3">
+            <div class="product-cont">
+              <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+              <button class='recommended bg-info align-top'>Recommended</button>
+              <div class="donate-container">
+              <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+              <button class="donate-btn bg-info">Donate</button>
+            </div>
+          </div>
+         </div>
+         <div class="col-lg-4 col-md-6 col-12 mb-3">
+            <div class="product-cont">
+              <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+              <button class='recommended bg-info align-top'>Recommended</button>
+              <div class="donate-container">
+              <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
+              <button class="donate-btn bg-info">Donate</button>
+            </div>
+          </div>
+         </div>
+      </div>
+   </section>
+   <section class="payment-confirmation py-3">
+
+      <div class="row">
+
+         <div class="col-md-4 col-4 col-lg-4">
+            
+         </div>
+
+
+      </div>
+
+   </section>
   </div>
 </div>
