--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,10 +7,6 @@
 // If you want to add something do it here
 @import "custom";
 
-//Login SCSS File
+//Page styles
 
-@import 'login';
-
-//About us scss
-
-@import 'about';
+@import 'page-styles'
