--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -65,7 +65,7 @@
                  <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
                  <button class='recommended bg-info align-top'>Recommended</button>
                  <div class="donate-container">
-                 <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                 <span class="font-strong text-info mb-3"><h4>Education</h4></span>
                  <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
                  <button class="donate-btn bg-info">Donate</button>
                 </div>
@@ -76,7 +76,7 @@
                 <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
                 <button class='recommended bg-info align-top'>Recommended</button>
                 <div class="donate-container">
-                <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                <span class="font-strong text-info mb-3"><h4>Education</h4></span>
                 <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
                 <button class="donate-btn bg-info">Donate</button>
               </div>
@@ -87,7 +87,7 @@
                 <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
                 <button class='recommended bg-info align-top'>Recommended</button>
                 <div class="donate-container">
-                <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+                <span class="font-strong text-info mb-3"><h4>Education</h4></span>
                 <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
                 <button class="donate-btn bg-info">Donate</button>
               </div>
@@ -116,7 +116,7 @@
                <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
                <button class='recommended bg-info align-top'>Recommended</button>
                <div class="donate-container">
-               <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+               <span class="font-strong text-info mb-3"><h4>Education</h4></span>
                <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
                <button class="donate-btn bg-info">Donate</button>
               </div>
@@ -127,7 +127,7 @@
               <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
               <button class='recommended bg-info align-top'>Recommended</button>
               <div class="donate-container">
-              <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+              <span class="font-strong text-info mb-3"><h4>Education</h4></span>
               <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
               <button class="donate-btn bg-info">Donate</button>
             </div>
@@ -138,7 +138,7 @@
               <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
               <button class='recommended bg-info align-top'>Recommended</button>
               <div class="donate-container">
-              <span class="text-danger mb-3"><strong>Education</strong><span class="fl-r">Jharkand</span></span>
+              <span class="font-strong text-info mb-3"><h4>Education</h4></span>
               <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
               <button class="donate-btn bg-info">Donate</button>
             </div>
