--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -38,6 +38,44 @@
            </div>
         </div>
      </header>
+     <div class="carousal-cont">
+      <ngb-carousel [showNavigationArrows]="true" 
+      [showNavigationIndicators]="true"
+      interval="5000"
+      [keyboard]="true"
+      [pauseOnHover]="true"
+      [wrap]="true"
+      [activeId]="'secondSlide'">
+         <ng-template ngbSlide>
+           <div class="picsum-img-wrapper img-block-1 ">
+           </div>
+           <div class="carousel-caption">
+             <h2 class="font-strong">Title Goes Here</h2>
+             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. psum dolor sit amet, consectetur adipiscing elitpsum dolor sit amet, consectetur adipiscing elit</h4>
+             <button class="carousel-donate-btn">Donate</button>
+            </div>
+         </ng-template>
+         <ng-template ngbSlide>
+           <div class="picsum-img-wrapper img-block-2">
+           </div>
+           <div class="carousel-caption">
+            <h2 class="font-strong">Title Goes Here</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. psum dolor sit amet, consectetur adipiscing elitpsum dolor sit amet, consectetur adipiscing elit</h4>
+            <button class="carousel-donate-btn">Donate</button>  
+         </div>
+         </ng-template>
+         <ng-template ngbSlide>
+            <div class="picsum-img-wrapper img-block-3">
+            </div>
+            <div class="carousel-caption">
+             <h2 class="font-strong">Title Goes Here</h2>
+             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. psum dolor sit amet, consectetur adipiscing elitpsum dolor sit amet, consectetur adipiscing elit</h4>
+             <button class="carousel-donate-btn">Donate</button>
+            </div>
+          </ng-template>
+       </ngb-carousel>
+       
+     </div>
   </div>
   <div class="desc-container">
      <section class="container-content py-3">
@@ -45,7 +83,7 @@
            <div  class="background-1 col-lg-6 col-md-12 p-0"></div>
            <div class="col-lg-6 col-md-12 p-4">
               <button class='recommended bg-warning'>Recommended</button>
-              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India. Join the fight against hunger and malnutrition.</h5>
+              <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer. Join the fight against hunger and malnutrition.</h5>
               <div class="progress-title pt-md-4"><span>1,553 supporters needed</span><span class="fl-r">70%</span></div>
               <div class="progress">
                  <div class="progress-bar" style="width:70%"></div>
@@ -60,69 +98,69 @@
               <h3>Sponsor a child's education
               </h3>
            </div>
-           <div class="col-lg-4 col-md-6 col-12 mb-3">
+           <div class="col-lg-4 col-md-6 col-12 my-3">
               <div class="product-cont">
-                 <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                 <img src="assets/img/images/img5.jpg" class="prod-img mb-3">
                  <button class='recommended bg-info align-top'>Recommended</button>
                  <div class="donate-container">
                  <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-                 <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-                 <button class="donate-btn bg-info">Donate</button>
+                 <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+                 <button class="donate-btn bg-warning">Donate</button>
                 </div>
               </div>
            </div>
-           <div class="col-lg-4 col-md-6 col-12 mb-3">
+           <div class="col-lg-4 col-md-6 col-12 my-3">
               <div class="product-cont">
-                <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                <img src="assets/img/images/img6.jpg" class="prod-img mb-3">
                 <button class='recommended bg-info align-top'>Recommended</button>
                 <div class="donate-container">
                 <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-                <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-                <button class="donate-btn bg-info">Donate</button>
+                <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+                <button class="donate-btn bg-warning">Donate</button>
               </div>
             </div>
            </div>
-           <div class="col-lg-4 col-md-6 col-12 mb-3">
+           <div class="col-lg-4 col-md-6 col-12 my-3">
               <div class="product-cont">
-                <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+                <img src="assets/img/images/img7.jpg" class="prod-img mb-3">
                 <button class='recommended bg-info align-top'>Recommended</button>
                 <div class="donate-container">
                 <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-                <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-                <button class="donate-btn bg-info">Donate</button>
+                <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+                <button class="donate-btn bg-warning">Donate</button>
               </div>
             </div>
            </div>
-           <div class="col-lg-4 col-md-6 col-12 mb-3">
+           <div class="col-lg-4 col-md-6 col-12 my-3">
             <div class="product-cont">
-              <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
+              <img src="assets/img/images/img8.jpg" class="prod-img mb-3">
               <button class='recommended bg-info align-top'>Recommended</button>
               <div class="donate-container">
               <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-              <button class="donate-btn bg-info">Donate</button>
+              <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+              <button class="donate-btn bg-warning">Donate</button>
             </div>
           </div>
          </div>
-         <div class="col-lg-4 col-md-6 col-12 mb-3">
+         <div class="col-lg-4 col-md-6 col-12 my-3">
             <div class="product-cont">
               <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
               <button class='recommended bg-info align-top'>Recommended</button>
               <div class="donate-container">
               <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-              <button class="donate-btn bg-info">Donate</button>
+              <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+              <button class="donate-btn bg-warning">Donate</button>
             </div>
           </div>
          </div>
-         <div class="col-lg-4 col-md-6 col-12 mb-3">
+         <div class="col-lg-4 col-md-6 col-12 my-3">
             <div class="product-cont">
               <img src="assets/img/images/img1.jpg" class="prod-img mb-3">
               <button class='recommended bg-info align-top'>Recommended</button>
               <div class="donate-container">
               <span class="font-strong text-info mb-3"><h4>Education</h4></span>
-              <h5 class="desc">Support Akshaya Patra and GiveIndia in Mission 10 Million Meals to provide food to schoolkids across 19 states in India</h5>
-              <button class="donate-btn bg-info">Donate</button>
+              <h5 class="desc">Lorem Ipsum is simply dummy text of the  tting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</h5>
+              <button class="donate-btn bg-warning">Donate</button>
             </div>
           </div>
          </div>
@@ -139,6 +177,41 @@
 
 
       </div>
+
+   </section>
+   <section class="footer py-3">
+<hr>
+      <div class="row px-md-5  footer">
+         <div class="col-md-3 pt-5">
+             <p class="footer-link-head">About Us</p>
+             <p class="footer-sub-txt">In 1996, a dedicated educator from New York, Sinok Park, founded The Best Kindergarten for working parents in New York metropolitan area. </p>
+         </div>
+         <div class="col-md-3 pt-5 col-6">
+             <p class="footer-link-head">Quick Links</p>
+             <div class="footer-sub-txt">Our Kindergarten</div>
+             <div class="footer-sub-txt">Latest News</div>
+             <div class="footer-sub-txt">Upcoming Events</div>
+             <div class="footer-sub-txt">Contacts</div>
+         </div>
+         <div class="col-md-3 pt-5 col-6">
+             <p class="footer-link-head">Keep In Touch</p>
+             <div class="footer-sub-txt">YouTube</div>
+             <div class="footer-sub-txt">Twitter</div>
+             <div class="footer-sub-txt">Instagram</div>
+             <div class="footer-sub-txt">Snapchat</div>
+         </div>
+         <div class="col-md-3 pt-5">
+             <p class="footer-link-head">Contact Us</p>
+             <div class="footer-sub-txt "><i class="fa fa-map-marker footer-ico"></i>19, 29th St, Nanganallur, Chennai, Tamil Nadu 600061</div>
+             <div class="footer-sub-txt pt-md-3"><i class="fa fa-phone footer-ico"></i>099520 06993</div>
+             <div class="footer-sub-txt pt-md-3"><i class="fa fa-envelope footer-ico"></i>chiselmontessori@gmail.com</div>
+             <div class="footer-sub-txt pt-md-3"><i class="fa fa-globe footer-ico"></i>Website: <a href="http://www.chiselmontessori.com/">http://chisel Montessori school.com</a></div>
+         </div>
+         <div class="col-md-12 pt-md-5">
+             <p class="copyright">Privacy Policy <span class="copy-right-txt">/ This is a sample website - cmsmasters © 2019 / All Rights Reserved</span></p>
+         </div>
+     </div>
+
 
    </section>
   </div>
