--- a/src/scss/_page-styles.scss
+++ b/src/scss/_page-styles.scss
@@ -15,7 +15,59 @@ h5,
 h6 {
 	font-weight: 400;
 }
+.carousal-cont {
+    position: relative;
+    height: 76vh;
+}
+.picsum-img-wrapper
+{
+	height: 76vh;
 
+}
+.carousel-donate-btn {
+	padding: 7px;
+	margin-top: 6px;
+	width: 152px;
+	font-size: 18px;
+	font-weight: 600;
+	color: #fff;
+	border: none;
+	background: #8b8bff;
+}
+.img-block-1
+{
+	background: url('../assets/img/images/img0.jpg');
+	background-size: cover;
+	background-position: center;
+}
+.img-block-2
+{
+	background: url('../assets/img/images/img1.jpg');
+	background-size: cover;
+	background-position: center;
+}
+.img-block-3
+{
+	background: url('../assets/img/images/img2.jpg');
+	background-size: cover;
+	background-position: center;
+}
+.carousel-control-prev,.carousel-control-next {
+	display:none;
+}
+@media only screen and (max-width: 767px) {
+	.carousel-caption  {
+		width: 100% !important;
+	}
+}
+.carousel-caption {
+    position: absolute;
+    right: 0% !important;
+    text-align: unset !important;
+    left: 6% !important;
+	top: 36% !important;
+	width: 51%;
+}
 .progress {
 	height: 5px;
 }
@@ -81,10 +133,8 @@ h6 {
             margin-bottom: 20px;
             border-radius: 50px;
         }
-		@media only screen and (max-width: 767px) {
-			width: 85%;
-		}
-		width: 80%;
+
+		width: 90%;
 		margin: 0 auto;
 		padding: 30px 0 30px 0;
 		font-family:none !important;
@@ -116,7 +166,7 @@ h6 {
 				}
 			}
 			.background-1 {
-				background: url('../assets/img/images/img0.jpg');
+				background: url('../assets/img/images/img4.jpg');
 				background-size: cover;
 				border-top-left-radius: 12px;
 				border-bottom-left-radius: 12px;
@@ -135,10 +185,12 @@ h6 {
             .align-top {
                 position: absolute;
                 left: 9px;
-                top: 32%;
+                top: 38%;
             }
 			.prod-img {
 				width: 100%;
+				border-top-right-radius: 11px;
+				border-top-left-radius: 11px;
 			}
 		}
 
