--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,13 +2,13 @@
   <div class="header-container">
      <header>
         <div class="row">
-           <div class="col-md-12">
+           <!-- <div class="col-md-12">
               <div class="top-header py-2 px-3">
                  <h6>Workplace Giving</h6>
                  <h6>Previous Platform</h6>
                  <button class="login-btn">Login</button>
               </div>
-           </div>
+           </div> -->
            <div class="col-md-12">
               <nav class="navbar navbar-expand-lg page-navbar  py-3 px-3">
                  <img src="assets/img/brand/logo.png" class="logo">
@@ -179,7 +179,8 @@
       </div>
 
    </section>
-   <section class="footer py-3">
+</div>
+   <section class="footer py-3 footer-bg">
 <hr>
       <div class="row px-md-5  footer">
          <div class="col-md-3 pt-5">
@@ -214,5 +215,5 @@
 
 
    </section>
-  </div>
+  
 </div>
