--- a/src/scss/_page-styles.scss
+++ b/src/scss/_page-styles.scss
@@ -105,6 +105,7 @@ h6 {
 	}
 	.page-navbar {
 		border-bottom: 1px solid #ededed;
+		background-color: #00c1fb;
 		.logo {
 			width: 150px;
 			position: relative;
@@ -398,4 +399,10 @@ h6 {
   }
   
 	}
+}
+
+// footer-css
+.footer-bg {
+	background-color: #000000;
+	color: #ffffff;
 }
