--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,37 +1,8 @@
 <div class="wrapper">
    <div class="header-container">
-      <header>
-         <div class="row">
-            <div class="col-md-12">
-               <nav class="navbar navbar-expand-lg fixed-top page-navbar  py-3 px-3">
-                  <img src="assets/img/brand/logo.png" class="logo">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                  <i class="cui-justify-left icons font-2xl d-block mt-4"></i>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item pr-md-3 active">
-                           <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item pr-md-3">
-                           <a class="nav-link" href="#">What We Are</a>
-                        </li>
-                        <li class="nav-item pr-md-3">
-                           <a class="nav-link" href="#">What We Do</a>
-                        </li>
-                        <li class="nav-item pr-md-3">
-                           <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-                        <li class="nav-item pr-md-3">
-                           <a class="nav-link" href="#">Events</a>
-                        </li>
-                     </ul>
-                  </div>
-               </nav>
-            </div>
-         </div>
-      </header>
+     <app-header></app-header>
       <div class="carousal-cont">
+      
          <ngb-carousel [showNavigationArrows]="true" 
          [showNavigationIndicators]="true"
          interval="5000"
@@ -67,6 +38,8 @@
             </div>
          </ng-template>
          </ngb-carousel>
+
+
       </div>
    </div>
    <div class="desc-container">
@@ -170,36 +143,5 @@
          </div>
       </section>
    </div>
-   <section class="footer py-3">
-      <div class="row px-5 footer">
-         <div class="col-md-3 pt-5">
-            <p class="footer-link-head">About Us</p>
-            <p class="footer-sub-txt">In 1996, a dedicated educator from New York, Sinok Park, founded The Best Kindergarten for working parents in New York metropolitan area. </p>
-         </div>
-         <div class="col-md-3 pt-5 col-6">
-            <p class="footer-link-head">Quick Links</p>
-            <div class="footer-sub-txt">Our Kindergarten</div>
-            <div class="footer-sub-txt">Latest News</div>
-            <div class="footer-sub-txt">Upcoming Events</div>
-            <div class="footer-sub-txt">Contacts</div>
-         </div>
-         <div class="col-md-3 pt-5 col-6">
-            <p class="footer-link-head">Keep In Touch</p>
-            <div class="footer-sub-txt">YouTube</div>
-            <div class="footer-sub-txt">Twitter</div>
-            <div class="footer-sub-txt">Instagram</div>
-            <div class="footer-sub-txt">Snapchat</div>
-         </div>
-         <div class="col-md-3 pt-5">
-            <p class="footer-link-head">Contact Us</p>
-            <div class="footer-sub-txt "><i class="fa fa-map-marker footer-ico"></i>19, 29th St, Nanganallur, Chennai, Tamil Nadu 600061</div>
-            <div class="footer-sub-txt pt-md-3"><i class="fa fa-phone footer-ico"></i>099520 06993</div>
-            <div class="footer-sub-txt pt-md-3"><i class="fa fa-envelope footer-ico"></i>chiselmontessori@gmail.com</div>
-            <div class="footer-sub-txt pt-md-3"><i class="fa fa-globe footer-ico"></i>Website: <a href="http://www.chiselmontessori.com/">http://chisel Montessori school.com</a></div>
-         </div>
-         <div class="col-md-12 pt-md-5">
-            <p class="copyright">Privacy Policy <span class="copy-right-txt">/ This is a sample website - cmsmasters © 2019 / All Rights Reserved</span></p>
-         </div>
-      </div>
-   </section>
+<app-footer></app-footer>
 </div>
