--- a/src/scss/_page-styles.scss
+++ b/src/scss/_page-styles.scss
@@ -1,7 +1,9 @@
+/* Common For All User Pages */
+
 * {
 	margin: 0;
 	padding: 0
-}
+ }
 
 body {
 	background-color: #ffffff;
@@ -75,11 +77,7 @@ h6 {
 .carousel-control-prev,.carousel-control-next {
 	display:none;
 }
-@media only screen and (max-width: 767px) {
-	.carousel-caption  {
-		width: 100% !important;
-	}
-}
+
 .carousel-caption {
     position: absolute;
     right: 0% !important;
@@ -417,5 +415,12 @@ h6 {
 	color: #1bbca3;
   }
   
+	}
+}
+
+/* Media */
+@media only screen and (max-width: 767px) {
+	.carousel-caption  {
+		width: 100% !important;
 	}
 }
