routing about us component

--- a/src/app/views/about-us/about-us.component.html
+++ b/src/app/views/about-us/about-us.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper">
     <header>
         <div class="row">
-           <div class="col-md-12">
+           <!-- <div class="col-md-12">
               <div class="top-header py-2 px-3">
                  <h6>Workplace Giving</h6>
                  <h6>Previous Platform</h6>
                  <button class="login-btn">Login</button>
               </div>
-           </div>
+           </div> -->
            <div class="col-md-12">
               <nav class="navbar navbar-expand-lg page-navbar  py-3 px-3">
                  <img src="assets/img/brand/logo.png" class="logo">
@@ -104,7 +104,7 @@
               data-target="#directors"
             >
               <div class="icon-box">
-                <div class="icon"><i class="icofont-users-alt-5"></i></div>
+                <div class="icon"><i class="bx bxs-group"></i></div>
                 <h4 class="title"><a>Board of Directors</a></h4>
                 <p class="description">
                   Sitranu Foundation will be a registered NGO in India (due
@@ -410,40 +410,40 @@
   
 
 </div>
-<section class="footer p-3">
-    <hr>
-          <div class="row px-md-5  footer">
-             <div class="col-md-3 pt-5">
-                 <p class="footer-link-head">About Us</p>
-                 <p class="footer-sub-txt">In 1996, a dedicated educator from New York, Sinok Park, founded The Best Kindergarten for working parents in New York metropolitan area. </p>
-             </div>
-             <div class="col-md-3 pt-5 col-6">
-                 <p class="footer-link-head">Quick Links</p>
-                 <div class="footer-sub-txt">Our Kindergarten</div>
-                 <div class="footer-sub-txt">Latest News</div>
-                 <div class="footer-sub-txt">Upcoming Events</div>
-                 <div class="footer-sub-txt">Contacts</div>
-             </div>
-             <div class="col-md-3 pt-5 col-6">
-                 <p class="footer-link-head">Keep In Touch</p>
-                 <div class="footer-sub-txt">YouTube</div>
-                 <div class="footer-sub-txt">Twitter</div>
-                 <div class="footer-sub-txt">Instagram</div>
-                 <div class="footer-sub-txt">Snapchat</div>
-             </div>
-             <div class="col-md-3 pt-5">
-                 <p class="footer-link-head">Contact Us</p>
-                 <div class="footer-sub-txt "><i class="fa fa-map-marker footer-ico"></i>19, 29th St, Nanganallur, Chennai, Tamil Nadu 600061</div>
-                 <div class="footer-sub-txt pt-md-3"><i class="fa fa-phone footer-ico"></i>099520 06993</div>
-                 <div class="footer-sub-txt pt-md-3"><i class="fa fa-envelope footer-ico"></i>chiselmontessori@gmail.com</div>
-                 <div class="footer-sub-txt pt-md-3"><i class="fa fa-globe footer-ico"></i>Website: <a href="http://www.chiselmontessori.com/">http://chisel Montessori school.com</a></div>
-             </div>
-             <div class="col-md-12 pt-md-5">
-                 <p class="copyright">Privacy Policy <span class="copy-right-txt">/ This is a sample website - cmsmasters © 2019 / All Rights Reserved</span></p>
-             </div>
-         </div>
-    
-    
-       </section>
+<section class="footer py-3 footer-bg">
+  <hr>
+        <div class="row px-md-5  footer">
+           <div class="col-md-3 pt-5">
+               <p class="footer-link-head">About Us</p>
+               <p class="footer-sub-txt">In 1996, a dedicated educator from New York, Sinok Park, founded The Best Kindergarten for working parents in New York metropolitan area. </p>
+           </div>
+           <div class="col-md-3 pt-5 col-6">
+               <p class="footer-link-head">Quick Links</p>
+               <div class="footer-sub-txt">Our Kindergarten</div>
+               <div class="footer-sub-txt">Latest News</div>
+               <div class="footer-sub-txt">Upcoming Events</div>
+               <div class="footer-sub-txt">Contacts</div>
+           </div>
+           <div class="col-md-3 pt-5 col-6">
+               <p class="footer-link-head">Keep In Touch</p>
+               <div class="footer-sub-txt">YouTube</div>
+               <div class="footer-sub-txt">Twitter</div>
+               <div class="footer-sub-txt">Instagram</div>
+               <div class="footer-sub-txt">Snapchat</div>
+           </div>
+           <div class="col-md-3 pt-5">
+               <p class="footer-link-head">Contact Us</p>
+               <div class="footer-sub-txt "><i class="fa fa-map-marker footer-ico"></i>19, 29th St, Nanganallur, Chennai, Tamil Nadu 600061</div>
+               <div class="footer-sub-txt pt-md-3"><i class="fa fa-phone footer-ico"></i>099520 06993</div>
+               <div class="footer-sub-txt pt-md-3"><i class="fa fa-envelope footer-ico"></i>chiselmontessori@gmail.com</div>
+               <div class="footer-sub-txt pt-md-3"><i class="fa fa-globe footer-ico"></i>Website: <a href="http://www.chiselmontessori.com/">http://chisel Montessori school.com</a></div>
+           </div>
+           <div class="col-md-12 pt-md-5">
+               <p class="copyright">Privacy Policy <span class="copy-right-txt">/ This is a sample website - cmsmasters © 2019 / All Rights Reserved</span></p>
+           </div>
+       </div>
+  
+  
+     </section>
 
 </div>
