--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -21,7 +21,7 @@
                           <a class="nav-link" href="#">Home</a>
                        </li>
                        <li class="nav-item pr-md-3">
-                          <a class="nav-link" href="#">What We Are</a>
+                          <a class="nav-link" href="/#/about">What We Are</a>
                        </li>
                        <li class="nav-item pr-md-3">
                           <a class="nav-link" href="#">What We Do</a>
