changes in home page

--- a/src/app/views/about-us/about-us.component.html
+++ b/src/app/views/about-us/about-us.component.html
@@ -62,7 +62,7 @@
                  data-target="#directors"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="icofont-users-alt-5"></i></div>
+                    <div class="icon"><i class="bx bx-group"></i></div>
                     <h4 class="title"><a>Board of Directors</a></h4>
                     <p class="description">
                        Sitranu Foundation will be a registered NGO in India (due
