--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,26 @@
 // If you want to add something do it here
 @import "custom";
 
-//Page styles
+//Header Style
 
-@import 'page-styles'
+@import "header";
+
+//Home styles
+
+@import "home";
+
+//About styles
+
+@import "about";
+
+//History styles
+
+@import "history";
+
+//Donate styles
+
+@import "donate";
+
+//Donate styles
+
+@import "event";
