--- a/src/app/shared/views/footer.component.html
+++ b/src/app/shared/views/footer.component.html
@@ -1,4 +1,4 @@
-<section class="footer py-3">
+<section class="footer p-3">
     <div class="row px-md-5  footer">
        <div class="col-md-3 pt-5">
           <p class="footer-link-head">About Us</p>
