--- a/src/app/views/about-us/about-us.component.html
+++ b/src/app/views/about-us/about-us.component.html
@@ -16,12 +16,12 @@
                  data-target="#history"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                    <div class="icon"><i class="fa fa-hourglass-o"></i></div>
                     <h4 class="title"><a>Our History</a></h4>
                     <p class="description">
                        It all started on a fine morning at the university dorm.
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
               <div
@@ -30,13 +30,13 @@
                  data-target="#mission"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bx-bullseye"></i></div>
+                    <div class="icon"><i class="fa fa-road"></i></div>
                     <h4 class="title"><a>Our Mission</a></h4>
                     <p class="description">
                        In the state of Tamil Nadu in India, every year around a million
                        students appear
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
               <div
@@ -45,13 +45,13 @@
                  data-target="#strengths"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bx-tachometer"></i></div>
+                    <div class="icon"><i class="fa fa-users"></i></div>
                     <h4 class="title"><a>Our Strengths</a></h4>
                     <p class="description">
                        A foundation owned by everyone. With members adding their
                        friends and family
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
            </div>
@@ -62,13 +62,13 @@
                  data-target="#directors"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bx-group"></i></div>
+                    <div class="icon"><i class="fa fa-sitemap"></i></div>
                     <h4 class="title"><a>Board of Directors</a></h4>
                     <p class="description">
                        Sitranu Foundation will be a registered NGO in India (due
                        04.2019)
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
               <div
@@ -77,13 +77,13 @@
                  data-target="#sponsorship"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bxs-dollar-circle"></i></div>
+                    <div class="icon"><i class="fa fa-graduation-cap"></i></div>
                     <h4 class="title"><a>Student Sponsorship</a></h4>
                     <p class="description">
                        Voluptatum deleniti atque corrupti quos dolores et quas
                        molestias excepturi
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
               <div
@@ -92,13 +92,13 @@
                  data-target="#process"
                  >
                  <div class="icon-box">
-                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <div class="icon"><i class="fa fa-male"></i></div>
                     <h4 class="title"><a >Student Selection Process</a></h4>
                     <p class="description">
                        Duis aute irure dolor in reprehenderit in voluptate velit esse
                        cillum dolore
                     </p>
-                    <a>Read more &raquo;</a>
+                    <button class="btn-readmore">Read more &raquo;</button>
                  </div>
               </div>
            </div>
