--- a/src/app/shared/views/header.component.html
+++ b/src/app/shared/views/header.component.html
@@ -2,7 +2,8 @@
     <div class="row">
        <div class="col-md-12">
           <nav class="navbar navbar-expand-lg page-navbar fixed-top ml-auto py-3 px-3">
-             <img src="assets/img/brand/logo.png" class="logo"> 
+             <img src="assets/img/brand/logo.png" class="logo"  (click)="redirect('')"> 
+             <img src="assets/img/brand/logo.png" class="logo1" > 
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
              <i class="cui-justify-left icons font-2xl d-block mt-4"></i>
              </button>
@@ -18,8 +19,11 @@
                       <a class="nav-link"(click)="redirect('history')">What We Do</a>
                    </li>
                    <li class="nav-item pr-md-3">
-                      <a class="nav-link"(click)="redirect('donate')">Donate Us</a>
+                      <a class="nav-link"(click)="redirect('donate')">Donate</a>
                    </li>
+                   <li class="nav-item pr-md-3">
+                     <a class="nav-link"(click)="redirect('children')">Children</a>
+                  </li>
                    <li class="nav-item pr-md-3">
                       <a class="nav-link"(click)="redirect('event')">Events</a>
                    </li>
