--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10,6 +10,14 @@ body {
   font-family: "Work Sans", sans-serif !important;
 }
 
+a.nav-link {
+  font-size: 18px;
+}
+
+.logo1
+{
+  display: none;
+}
 .footer {
   background: #000;
   color: #fff;
@@ -18,7 +26,7 @@ body {
   }
 }
 .services {
-  margin: 98px 0px 50px 0pc;
+  margin: 136px 0px 50px 0pc;
 }
 
 li {
